# bucket3

./: README.md  pyproject.toml
bucket3/: __main__.py  hasher.py  server.example.cfg  server.py  uploader.py
bucket3/static/: main.css  main.js
bucket3/templates/: upload.html
tests/: test_hasher.py
