[tool.poetry]
name = "bucket3"
version = "0.1.0"
description = ""
authors = ["Zhuoyun Wei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.43"
flask = "^3.0.2"

[tool.poetry.scripts]
s3u = "bucket3.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
