[tool.poetry]
name = "bucket3"
version = "0.1.1"
description = ""
authors = ["Zhuoyun Wei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.43"
flask = "^3.0.2"

[tool.poetry.scripts]
bucket3 = "bucket3.__main__:cli"
bucket3-web = "bucket3.server:runserver"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
